Source/WebCore/platform/mediastream/MediaConstraints.cpp
@@ -404,7 +404,41 @@ void MediaConstraints::setDefaultVideoConstraints()
     
     addDefaultVideoConstraints(mandatoryConstraints, needsFrameRateConstraints, needsSizeConstraints, needsFacingModeConstraints);
 }
-    
+
+void MediaConstraint::log() const
+{
+    switch (dataType()) {
+    case DataType::Boolean:
+        downcast<const BooleanConstraint>(*this).logAsBoolean();
+        break;
+    case DataType::Double:
+        downcast<const DoubleConstraint>(*this).logAsDouble();
+        break;
+    case DataType::Integer:
+        downcast<const IntConstraint>(*this).logAsInt();
+        break;
+    case DataType::None:
+    case DataType::String:
+        WTFLogAlways("MediaConstraint %d of type %d", constraintType(), dataType());
+    }
+}
+
+void BooleanConstraint::logAsBoolean() const
+{
+    WTFLogAlways("BooleanConstraint %d, exact %d, ideal %d", constraintType(), m_exact ? *m_exact : -1, m_ideal ? *m_ideal : -1);
+}
+
+void DoubleConstraint::logAsDouble() const
+{
+    WTFLogAlways("DoubleConstraint %d, min %f, max %f, exact %f, ideal %f", constraintType(), m_min ? *m_min : -1, m_max ? *m_max : -1, m_exact ? *m_exact : -1, m_ideal ? *m_ideal : -1);
+}
+
+void IntConstraint::logAsInt() const
+{
+    WTFLogAlways("IntConstraint %d, min %d, max %d, exact %d, ideal %d", constraintType(), m_min ? *m_min : -1, m_max ? *m_max : -1, m_exact ? *m_exact : -1, m_ideal ? *m_ideal : -1);
+}
+
+
 }
 
 #endif // ENABLE(MEDIA_STREAM)
